--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "datenv": "^0.0.0",
     "dayjs": "^1.11.13",
+    "express": "^4.21.2",
     "moment": "^2.30.1",
+    "mongodb": "^6.14.2",
+    "mongoose": "^8.12.1",
     "next": "15.2.1",
     "react": "^19.0.0",
     "react-calendar": "^5.1.0",
