--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "start": "NODE_ENV=production node server.cjs"
   },
   "dependencies": {
+    "axios": "^1.8.4",
+    "clsx": "^2.1.1",
     "datenv": "^0.0.0",
     "dayjs": "^1.11.13",
     "dotenv": "^16.4.7",
@@ -16,8 +18,10 @@
     "mongodb": "^6.14.2",
     "mongoose": "^8.12.1",
     "next": "15.2.1",
+    "nodemon": "^3.1.9",
     "react": "^19.0.0",
     "react-calendar": "^5.1.0",
+    "react-datepicker": "^8.2.1",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "zustand": "^5.0.3"
@@ -32,7 +36,6 @@
     "eslint": "^9",
     "eslint-config-next": "15.2.1",
     "eslint-config-prettier": "^10.0.2",
-    "nodemon": "^3.1.9",
     "postcss": "^8.5.3",
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
